--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.13)
-project(Astar)
+project(Backtrack)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Astar main.cpp)
+add_executable(Backtrack main.cpp)
